--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation('org.junit.jupiter:junit-jupiter:5.4.2')
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+    compile "org.slf4j:slf4j-api:1.7.25"
+    compile "ch.qos.logback:logback-classic:1.2.3"
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    compile group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.5.23'
+    testCompile 'com.typesafe.akka:akka-testkit_2.12:2.5.23'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
 }
